--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pedra papel ou tesoura</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 		<style type="text/css">
 			body{
 				padding: 20px;
@@ -20,39 +20,21 @@
 	</head>
 	<body>
 		<h1>Pedra, papel ou tesoura?</h1>
-		<button onclick="acao('pedra')">Pedra</button>
-		<button onclick="acao('papel')">Papel</button>
-		<button onclick="acao('tesoura')">Tesoura</button>
+		<button onclick="acao('pedra'); gerarResultado()">Pedra</button>
+		<button onclick="acao('papel'); gerarResultado()">Papel</button>
+		<button onclick="acao('tesoura'); gerarResultado()">Tesoura</button>
+		<!--
 		<h4>Sua escolha: <span id="suaEscolha"></span></h4>
 		<h4>Escolha da Cpu: <span id="cpuEscolha"></span></h4>
 		<h4 id="resultado"></h4>
+		-->
 		<script type="text/javascript">
 			
-			var suaEscolha = document.getElementById('suaEscolha')
-			var cpuEscolha = document.getElementById('cpuEscolha')
-			var resultado = document.getElementById('resultado')
+			var suaEscolha
+			var cpuEscolha
+			var resultado
+			var Resultado
 
-			function acao(escolha){
-				
-				suaEscolha.innerHTML = escolha
-				cpuEscolha.innerHTML = escolhaCpu()
-
-				if (escolha == cpuEscolha.innerHTML) {
-					resultado.innerHTML = 'Empate'
-				}
-				else if ((escolha == 'pedra') && (cpuEscolha.innerHTML == 'tesoura')) {
-					resultado.innerHTML = 'Venceu'
-				}
-				else if ((escolha == 'papel') && (cpuEscolha.innerHTML == 'pedra')) {
-					resultado.innerHTML = 'Venceu'
-				}
-				else if ((escolha == 'tesoura') && (cpuEscolha.innerHTML == 'papel')) {
-					resultado.innerHTML = 'Venceu'
-				}
-				else{
-					resultado.innerHTML = 'Perdeu'
-				}
-			}
 			function escolhaCpu(){
 				var escolhaCpu = Math.floor(Math.random() * 3)
 				switch(escolhaCpu){
@@ -63,6 +45,51 @@
 					case 2:
 						return 'tesoura'
 				}
+			}
+			function acao(escolha){
+				suaEscolha = escolha
+			}
+			var escolhaDaCpu
+			function gerarResultado(){
+				if(document.getElementById('escolha')){
+					document.getElementById('escolha').remove()
+				}
+				escolhaDaCpu = escolhaCpu()
+				var escolha = document.createElement('h3')
+				escolha.textContent = 'Você escolheu ' + suaEscolha
+				escolha.id = 'escolha'
+				document.body.appendChild(escolha)
+				if(document.getElementById('Escolha')){
+					document.getElementById('Escolha').remove()
+				}
+				cpuEscolha = document.createElement('h3')
+				cpuEscolha.textContent = 'CPU escolheu ' + escolhaDaCpu
+				cpuEscolha.id = 'Escolha'
+				document.body.appendChild(cpuEscolha)
+				
+
+				if (suaEscolha == escolhaDaCpu) {
+					Resultado = 'Empate'
+				}
+				else if ((suaEscolha == 'pedra') && (escolhaDaCpu == 'tesoura')) {
+					Resultado = 'Venceu'
+				}
+				else if ((suaEscolha == 'papel') && (escolhaDaCpu == 'pedra')) {
+					Resultado = 'Venceu'
+				}
+				else if ((suaEscolha == 'tesoura') && (escolhaDaCpu == 'papel')) {
+					Resultado = 'Venceu'
+				}
+				else{
+					Resultado = 'Perdeu'
+				}
+				if(document.getElementById('Resultado')){
+					document.getElementById('Resultado').remove()
+				}
+				resultado = document.createElement('h2')
+				resultado.textContent = Resultado
+				resultado.id = 'Resultado'
+				document.body.appendChild(resultado)
 			}
 		</script>
 	</body>
