--- a/index.html
+++ b/index.html
@@ -3,18 +3,32 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pedra papel ou tesoura</title>
+		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 		<style type="text/css">
 			body{
+				font-size: 1em;
 				padding: 20px;
+				background: #FFE4B5;
 			}
 			button{
+				padding: 10px 15px;
 				background: orange;
 				color: white;
-				border: 2px solid black;
+				border: none;
+				box-shadow: 0 5px 0 0 #DF7401;
 			}
 			button:hover{
 				background: darkorange;
+				cursor: pointer;
+			}
+			button:active{
+				position: relative;
+				top: 5px;
+				box-shadow: none;
+			}
+			h1{
+				width: 100%;
 			}
 		</style>
 	</head>
